@@ -4,6 +4,7 @@
       <provider
             default="true"
             delegate="org.eclipse.linuxtools.internal.gprof.launch.GprofLaunchConfigurationDelegate"
+            description="Function Execution Timing"
             id="org.eclipse.linuxtools.profiling.provider.timing.gprof"
             name="%gprofLaunchConfiguration.name.0"
             priority="1"
