@@ -1,4 +1,5 @@
 #Properties file for org.eclipse.linuxtools.valgrind.cachegrind
 Bundle-Vendor.0 = Eclipse Linux Tools
 Bundle-Name.0 = Cachegrind Plug-in
-cachegrindLaunchConfiguration.name.0=Cache Usage [Valgrind]
+cachegrindLaunchConfiguration.name.0=Cachegrind [Valgrind]
+cachegrindLaunchConfiguration.description.0=Cache Usage
