@@ -1,4 +1,5 @@
 #Properties file for org.eclipse.linuxtools.valgrind.helgrind
 Bundle-Vendor.0 = Eclipse Linux Tools
 Bundle-Name.0 = Helgrind Plug-in
-LaunchConfiguration.name.0 = Synchronization Checking [Valgrind]
+LaunchConfiguration.name.0 = Helgrind [Valgrind]
+LaunchConfiguration.description.0 = Synchronization Checking
