@@ -2,4 +2,5 @@
 Bundle-Vendor.0 = Eclipse Linux Tools
 Bundle-Name.0 = Massif Plug-in
 editor.name.0 = Heap Chart
-massifLaunchConfiguration.name.0 = Heap Usage [Valgrind]
+massifLaunchConfiguration.name.0 = Massif [Valgrind]
+massifLaunchConfiguration.description.0 = Heap Usage
