@@ -22,6 +22,7 @@
       <provider
             default="true"
             delegate="org.eclipse.linuxtools.internal.valgrind.launch.ValgrindLaunchConfigurationDelegate"
+            description="%memcheckLaunchConfiguration.description.0"
             id="org.eclipse.linuxtools.profiling.provider.valgrind.memcheck"
             name="%memcheckLaunchConfiguration.name.0"
             priority="1"
